--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,6 +4,7 @@
     background-size: cover;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #ece6fb;
   }
 
   .logo{
@@ -20,8 +21,18 @@
   .btn-floating.btn-large{
     width: 150.5px;
     height: 150.5px;
-    background-color: #c2e6ff;
     margin-bottom: 10%;
+    background-color: #c2e6ff;
+  }
+
+  .btn{
+    background-color: #c2e6ff;
+    color: black;
+  }
+
+  .btn:hover{
+    background-color: black;
+    color: #c2e6ff;
   }
 
   .btn-floating.btn-large i{
@@ -39,6 +50,10 @@
   }
 
   /* /////////////////////// NAV BAR /////////////////////// */
+  nav{
+    background-color: #c2e6ff;
+
+  }
   nav .brand-logo{
     font-family: 'Fugaz One', cursive;
     color: black;
@@ -95,4 +110,14 @@
       width: 50px;
       height: 50px;
     }
+
+    .add-bar-btn{
+      margin-top: 5%;
+      margin-bottom: 10%;
+    }
+  
+    #map{
+      height: 50%;
+    }
+  
   }
